--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "es6-promise": "^3.1.2",
+    "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
@@ -14,7 +16,9 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eth-lightwallet": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "hooked-web3-provider": "^1.0.0",
     "html-webpack-plugin": "^2.9.0",
     "json-loader": "^0.5.4",
     "react-transform-hmr": "^1.0.2",
