--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "es6-promise": "^3.1.2",
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
