--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "alt": "^0.18.2",
     "es6-promise": "^3.1.2",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-tap-event-plugin": "^0.2.2",
+    "web3": "^0.15.2"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
@@ -21,6 +23,7 @@
     "hooked-web3-provider": "^1.0.0",
     "html-webpack-plugin": "^2.9.0",
     "json-loader": "^0.5.4",
+    "material-ui": "^0.14.4",
     "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
