--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "alt": "^0.18.2",
+    "alt-container": "^1.0.2",
     "es6-promise": "^3.1.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
@@ -13,12 +14,11 @@
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eth-lightwallet": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "hooked-web3-provider": "^1.0.0",
     "html-webpack-plugin": "^2.9.0",
     "json-loader": "^0.5.4",
     "react-transform-hmr": "^1.0.2",
