--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,17 @@
 {
+
   "compilerOptions": {
-    "target" : "ES6"
-  }
+
+    "target": "ES6",
+
+    "module": "commonjs",
+
+    "experimentalDecorators" : true
+
+  },
+  
+  "exclude": [
+    "node_modules"
+  ]
+
 }
