--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "alt": "^0.18.2",
     "alt-container": "^1.0.2",
     "es6-promise": "^3.1.2",
+    "material-ui": "^0.14.4",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-tap-event-plugin": "^0.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
