--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "alt": "^0.18.2",
+    "alt-container": "^1.0.2",
     "es6-promise": "^3.1.2",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-<<<<<<< HEAD
-    "react-tap-event-plugin": "^0.2.2"
-=======
     "react-tap-event-plugin": "^0.2.2",
     "web3": "^0.15.2"
->>>>>>> 787b0a417606ac1f40431c4da5bdff630c10581e
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
